# price-oracle

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
contracts/oracles/: ChainedPriceOracle.vy  ChainlinkPriceOracle.vy  CurvePoolPriceOracle.vy  IPriceOracle.vyi  README.md  RatePriceOracle.vy  WeightedPriceOracle.vy
contracts/utils/: ManagedAdmin.vy  WeightRamping.vy
contracts/utils/weight_calculators/: AverageCalculator.vy  ExponentialCalculator.vy  IWeightedPriceCalculator.vyi
scripts/: deploy.py  fetch_graph.py
tests/: conftest.py
tests/contracts/: ChainlinkAggregatorMock.vy  PriceOracleMock.vy  StableSwapMock.vy
tests/shared/forked/: fixtures.py  settings.py
